--- a/frontend/src/styles/index.less
+++ b/frontend/src/styles/index.less
@@ -1,4 +1,10 @@
+@import "variables";
+
+html {
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 h1 {
   text-transform: uppercase;
-  color: palevioletred;
+  color: @color-new-zanata-blue;
 }
