--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -1,4 +1,4 @@
-@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css);
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css);
 
 @import '../components/Alert/index.less';
 @import '../components/NavBar/index.less';
