--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -1,1 +1,31 @@
 @import '~antd/dist/antd.less';
+
+.inputfile {
+  line-height: 1.5;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  font-size: 14px;
+  border-radius: 4px;
+  user-select: none;
+  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  position: relative;
+  color: rgba(0,0,0,.65);
+  background-color: #fff;
+  border-color: #d9d9d9;
+}
+
+.inputfile:hover {
+  border-color: #40a9ff;
+  border-right-width: 1px !important;
+}
+
+.fc-danger {
+  color: #f5222d!important;
+}
