feat(ZNTAMT-48) MT editor frontend
* fix typo in readme
* remove code from pom.xml that causes docker-maven-plugin to fail on macOS
* add container for Editor to frontend
* add layout for Editor frontend container
* add heading to Editor frontend container

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -1,1 +1,22 @@
 @import '~antd/dist/antd.less';
+
+.editor {
+
+  .logo {
+    width: 110px;
+    background: rgba(255, 255, 255, .2);
+    float: left;
+    color: #fff;
+    font-size: 1.2rem;
+    padding-left: 0.5rem;
+  }
+
+  .ant-layout-content {
+    padding: 0;
+  }
+
+  .ant-menu-dark {
+    float: right;
+  }
+
+}
