feat(ZNTAMT-48) WIP: MtAttribution component

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -26,6 +26,12 @@
   .ant-menu-dark {
     float: right;
   }
+
+  .columnHeading {
+    font-size: 1.1rem;
+    padding-left: 1rem;
+  }
+
 }
 
 .EditorToolbar {
