--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -31,7 +31,9 @@
     font-size: 1.1rem;
     padding-left: 1rem;
   }
-
+  .ant-tooltip-inner img {
+    padding-top: 0.375rem;
+  }
 }
 
 .EditorToolbar {
