feat(ZNTAMT-48) TransInfo (MT attribute and permalink) component

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -31,8 +31,22 @@
     font-size: 1.1rem;
     padding-left: 1rem;
   }
-  .ant-tooltip-inner img {
+  .ant-tooltip-inner a img {
     padding-top: 0.375rem;
+  }
+
+  .targetInfo .ant-row {
+    float: right;
+    height: 2rem;
+  }
+
+  .targetInfo .btnLink {
+    border: none;
+    outline: transparent;
+  }
+
+  p.targetText {
+    clear: both;
   }
 }
 
