feat(ZNTAMT-48) minor styling fixes to MT UI

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -44,9 +44,15 @@
     border: none;
     outline: transparent;
   }
-
+  .ant-popover-inner-content input.ant-input.ant-input-sm {
+    font-size: 0.75rem;
+  }
   p.targetText {
     clear: both;
+  }
+
+  p.sourceText {
+    padding-top: 2rem;
   }
 }
 
