--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -33,42 +33,59 @@
   }
 
   .targetInfo .ant-row {
-    float: right;
-    height: 2rem;
+    width:100%;
+  }
+
+  .targetInfo .ant-row span {
+    float:right;
   }
 
   .targetInfo .btnLink {
     border: none;
     outline: transparent;
   }
-  .ant-popover-inner-content input.ant-input.ant-input-sm {
+
+  .ant-popover-inner-content .ant-input {
     font-size: 0.75rem;
   }
-  p.targetText {
+
+  .targetInfo input {
+    margin-top: 2rem;
     clear: both;
   }
 
-  p.sourceText {
-    padding-top: 2rem;
+  .sourceTrans, .targetTrans {
+    background-color: #fff;
+    padding: 1rem;
+    border: solid 1px #ccc;
+  }
+
+  button.ant-btn.ant-btn-primary.saveTrans {
+    float:right;
+    margin-top: 1rem;
   }
 }
 
 .EditorToolbar {
+
   .ant-layout-header {
-    background: #002140;
-    min-height: 48px;
-    height: 48px;
-    color: rgba(255, 255, 255, .8);
-    line-height: 48px;
+  background: #002140;
+  height: auto;
+  color: rgba(255, 255, 255, .8);
+  line-height: 48px;
   }
+
   .editorPagination {
-    float: right;
-    padding: 0.5rem;
+  float: right;
+  padding: 0.5rem;
   }
+
   .ant-pagination {
-    color: rgba(255, 255, 255, .8);
+  color: rgba(255, 255, 255, .8);
   }
+
   .ant-pagination-simple .ant-pagination-simple-pager input {
-    color: #002140;
+  color: #002140;
   }
+
 }
