feat(ZNTAMT-48) * fix errors in TextInput * stylig fixes to editor

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -52,17 +52,24 @@
   .targetInfo input {
     margin-top: 2rem;
     clear: both;
+    border: none;
+    outline: none;
   }
 
   .sourceTrans, .targetTrans {
     background-color: #fff;
     padding: 1rem;
     border: solid 1px #ccc;
+    min-height: 141px;
   }
 
   button.ant-btn.ant-btn-primary.saveTrans {
     float:right;
     margin-top: 1rem;
+  }
+
+  .sourceText {
+    margin-top: 2rem;
   }
 }
 
