feat(ZNTAMT-48) styling for TransUnit panels

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -50,8 +50,9 @@
     font-size: 0.75rem;
   }
 
-  .targetInfo textarea {
-    margin-top: 2rem;
+ textarea.TransUnit {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     clear: both;
     border: none;
     outline: none;
@@ -75,8 +76,10 @@
   }
 
   .sourceText {
-    margin-top: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 4rem;
   }
+  
 }
 
 .EditorToolbar {
