--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -1,5 +1,5 @@
 @import '~antd/dist/antd.less';
-@import '../components/TransInfo/index.css';
+@import '../containers/Editor/index.css';
 
 .ant-layout-sider-trigger {
   padding-top: 1rem;
@@ -7,13 +7,17 @@
 
 .editor {
 
-  .logo {
-    width: 110px;
+  .logo  {
+    width: 300px;
     background: transparent;
-    float: left;
     color: #fff;
     font-size: 1.2rem;
-    padding-left: 0.5rem;
+    float: left;
+    padding-left: 1rem;
+  }
+
+  .ant-popover .ant-input-group > .ant-input:first-child {
+    font-size: 0.75rem;
   }
 
   .ant-layout-content {
@@ -56,16 +60,14 @@
     background: transparent;
   }
 
-
-  .ant-popover-inner-content .ant-input {
-    font-size: 0.75rem;
-  }
-
   button.ant-btn.ant-btn-primary.saveTrans {
     float:right;
     margin-top: 3rem;
   }
 
+  .transBorder {
+    border-left: solid 1px #ccc;
+  }
 
 }
 
@@ -74,6 +76,8 @@
   .ant-layout-header {
   background: #002140;
   height: auto;
+    padding-top:0.375rem;
+    padding-bottom: 0.375rem;
   color: rgba(255, 255, 255, .8);
   line-height: 48px;
   }
