feat(ZNTAMT-48) change positioning of MagpieMT logo and username, WIP: responsive fixes

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -5,18 +5,32 @@
   padding-top: 1rem;
 }
 
+.ant-layout-sider-collapsed .logo {
+  padding: 0.375rem;
+}
+
+.ant-layout-sider-collapsed .logo img {
+  width: 60px;
+}
+
+.ant-layout-sider-collapsed .logo span {
+  display: none;
+}
+
+.ant-menu-inline-collapsed .username li.ant-menu-item {
+  padding: 2px !important;
+}
+
+.logo  {
+  background: transparent;
+  color: #fff;
+  font-size: 1.2rem;
+  float: left;
+}
+
 .editor {
 
-  .logo  {
-    width: 300px;
-    background: transparent;
-    color: #fff;
-    font-size: 1.2rem;
-    float: left;
-    padding-left: 1rem;
-  }
-
-  .ant-popover .ant-input-group > .ant-input:first-child {
+  .ant-popover .ant-input-group > input {
     font-size: 0.75rem;
   }
 
