--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -17,8 +17,20 @@
   display: none;
 }
 
-.ant-menu-inline-collapsed .username li.ant-menu-item {
-  padding: 2px !important;
+.username {
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  display: inline-block;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .logo  {
