--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -17,10 +17,13 @@
   display: none;
 }
 
+.ant-layout-sider-collapsed .username {
+  width: 70px;
+}
+
 .username {
-  margin-left: auto;
-  margin-right: auto;
-  width: 95%;
+  margin-left: 0.375rem;
+  width: auto;
   display: inline-block;
   text-align: center;
   margin-top: 1rem;
@@ -92,7 +95,7 @@
   }
 
   .transBorder {
-    border-left: solid 1px #ccc;
+    border-left: 1px solid rgba(65, 105, 136, 0.08);
   }
 
 }
