--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -17,13 +17,9 @@
   display: none;
 }
 
-.ant-layout-sider-collapsed .username {
-  width: 70px;
-}
-
 .username {
   margin-left: 0.375rem;
-  width: auto;
+  width: 90%;
   display: inline-block;
   text-align: center;
   margin-top: 1rem;
