feat(ZNTAMT-48) responsive layout of EditorToolbar

--- a/frontend/src/app/styles/index.less
+++ b/frontend/src/app/styles/index.less
@@ -24,6 +24,7 @@
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  font-size: 0.7rem;
 }
 
 .ellipsis {
@@ -47,6 +48,10 @@
 
   .ant-layout-content {
     padding: 0 !important;
+  }
+
+  .smLabel {
+    font-size: 0.7rem;
   }
 
   .TransUnit-source {
